modification de la carte

--- a/formulaire.html
+++ b/formulaire.html
@@ -20,30 +20,30 @@
                 <div class="user-details">
                     <div class="input-box">
                         <labelclass="details">Nom</label>
-                        <input type="text" placeholder="votre nom" id="nom" >
+                        <input type="text" placeholder="votre nom" id="nom" name="nom">
                     </div>
                     <div class="input-box">
                         <label class="details">Prenom</label>
-                        <input type="text" placeholder="votre Prenom" id="prenom" >
+                        <input type="text" placeholder="votre Prenom" id="prenom" name="prenom">
                     </div>
                     <div class="input-box">
                         <label class="details">Email</label>
-                        <input type="email" placeholder="votre email" id="email" >
+                        <input type="email" placeholder="votre email" id="email" name="email">
                     </div>
                     <div class="input-box">
                         <label class="details">Biographie</label>
-                        <textarea class="form-control" id="biographie" rows="3"></textarea>
+                        <textarea class="form-control" id="biographie" name="biographie" rows="3"></textarea>
                         <p id="limite-text">
                             <span id="text-progress">00 </span> / 130
                         </p>
                     </div>
                     <div class="input-box">
                         <label class="details">Un fichier</label>
-                        <input class="form-control" type="file" id="photo">
+                        <input class="form-control" type="file" id="photo" name="photo">
                     </div>
                     <div class="input-box">
                         <label class="details">Niveaux</label>
-                        <select name="" id="niveau">
+                        <select name="" id="niveau" name="niveau">
                             <option value="Avancé(e)">Avancé(e)</option>
                             <option value="Intermédiaire">Intermédiaire</option>
                             <option value="Bas niveau">Bas niveau</option>
