--- a/formulaire.html
+++ b/formulaire.html
@@ -14,47 +14,45 @@
 
 <body>
     <div class="row justify-content-evenly">
-        <div class="col-5 containe">
+        <div class="col-5 containe mt-4">
             <div class="title">Formulaire</div>
             <form id="formulaire">
-                <div class="user-details">
-                    <div class="input-box">
-                        <labelclass="details">Nom</label>
-                        <input type="text" placeholder="votre nom" id="nom" name="nom">
-                    </div>
-                    <div class="input-box">
-                        <label class="details">Prenom</label>
-                        <input type="text" placeholder="votre Prenom" id="prenom" name="prenom">
-                    </div>
-                    <div class="input-box">
-                        <label class="details">Email</label>
-                        <input type="email" placeholder="votre email" id="email" name="email">
-                    </div>
-                    <div class="input-box">
-                        <label class="details">Biographie</label>
-                        <textarea class="form-control" id="biographie" name="biographie" rows="3"></textarea>
-                        <p id="limite-text">
-                            <span id="text-progress">00 </span> / 130
-                        </p>
-                    </div>
-                    <div class="input-box">
-                        <label class="details">Un fichier</label>
-                        <input class="form-control" type="file" id="photo" name="photo">
-                    </div>
-                    <div class="input-box">
-                        <label class="details">Niveaux</label>
-                        <select name="" id="niveau" name="niveau">
-                            <option value="Avancé(e)">Avancé(e)</option>
-                            <option value="Intermédiaire">Intermédiaire</option>
-                            <option value="Bas niveau">Bas niveau</option>
-                        </select>
-                    </div>
+                <div class="form-group">
+                    <label for="nom" class="form-label mt-2">Nom</label>
+                    <input type="text" class="form-control" id="nom" id="nom" name="nom" placeholder="Enter votre nom">
                 </div>
-                <br>
-                <span id="error"></span>
-                <div class="button">
-                    <input type="submit" value="ajouter">
+                <div class="form-group">
+                    <label for="prenom" class="form-label mt-2">Prenom</label>
+                    <input type="text" class="form-control" id="prenom" id="prenom" name="prenom"
+                        placeholder="Enter votre prenom">
                 </div>
+                <div class="form-group">
+                    <label for="email" class="form-label mt-2">Email</label>
+                    <input type="email" class="form-control" id="email" id="email" name="email"
+                        placeholder="Enter votre email">
+                </div>
+                <div class="form-group">
+                    <label for="biographie" class="form-label mt-2">Biographie</label>
+                    <textarea class="form-control" id="biographie" name="biographie" rows="3"></textarea>
+                    <p id="limit">
+                        <span id="progress">00 </span> / 130
+                    </p>
+                </div>
+                <div class="form-group">
+                    <label for="photo" class="form-label mt-2">Joindre un photo</label>
+                    <input class="form-control" type="file" id="photo" name="photo">
+                </div>
+                <div class="form-group">
+                    <label for="niveau" class="form-label mt-2">Niveau</label>
+                    <select class="form-select" id="niveau">
+                        <option>Nivau Avancé</option>
+                        <option>Niveau Intermédiaire</option>
+                        <option>Niveau Faible</option>
+                    </select>
+                </div>
+                <span class="error"></span>
+                <button type="submit" class="btn btn-ajout mt-3 float-end">Ajouter</button>
+                <button type="submit" class="btn btn-edit mt-3">Modifier</button>
             </form>
         </div>
         <div class="col-5 d-flex flex-column carte ">
@@ -64,10 +62,12 @@
             <button type="submit" class="btn btn-danger" id="sauvegarde">Sauvegarder</button>
         </div>
     </div>
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="../dist/app.js"></script>
 </body>
+
 </html>
