--- a/listDetail.html
+++ b/listDetail.html
@@ -7,14 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
-    <title>liste des apprenenants</title>
+    <title>liste des Apprenenants</title>
 </head>
 <body>
-
-    <h1>Listes de Apprenants</h1>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="cartes">
-       
-    </div>
+<div class="titre mt-3">
+    <h1>Liste des Apprenants</h1>
+</div>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 container-fluid" id="cartes"></div>
    <script src="./listApp.js"></script>
 </body>
 </html>
