--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="header d-flex">
             <h4 class="alert-heading mt-4">SCHOOL APP</h4>
         <a href="listDetail.html"><button type="button" class="liste mt-4 ms-4 btn">Liste des Apprenants</button></a>
+        <a href="index.html"><button type="button" class="liste mt-4 ms-4 btn">Accueil</button></a>
         </div>
     </div>
     <div class="row justify-content-evenly row-cols-2 row-cols-md-2 row-cols-lg-3">
@@ -55,6 +56,51 @@
                         <option>Niveau Intermédiaire</option>
                         <option>Niveau Débutant</option>
                     </select>
+                </div>
+                <div class="form-group">
+                    <div class="competences row mt-3">
+                        <label for="competences" class="form-label mt-2">Les Compétences</label>
+                    </div>
+                    <div class="form-outline row d-flex mb-3 mt-2">
+                        <div class="col-6">
+                            <label for="prenom" class="form-label mt-2">Maquetter une Application</label>
+                        </div>
+                        <div class="col-6">
+                            <input type="number" id="maquette" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-outline row d-flex mb-3 mt-2">
+                        <div class="col-6">
+                            <label for="baseD" class="form-label">Creer une base de Donnée</label>
+                        </div>
+                        <div class="col-6">
+                            <input type="number" id="baseD" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-outline row d-flex mb-3 mt-2">
+                        <div class="col-6">
+                            <label for="front" class="form-label">Developper Frontend et Backend</label>
+                        </div>
+                        <div class="col-6">
+                            <input type="number" id="frontBack" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-outline row d-flex mb-3 mt-2">
+                        <div class="col-6">
+                            <label for="front" class="form-label">Développer des composants d'accès aux données</label>
+                        </div>
+                        <div class="col-6">
+                            <input type="number" id="CompAcces" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-outline row d-flex mb-3 mt-2">
+                        <div class="col-6">
+                            <label for="front" class="form-label">Réaliser une interface utilisateur web statique et adaptable</label>
+                        </div>
+                        <div class="col-6">
+                            <input type="number" id="InterStat" class="form-control">
+                        </div>
+                    </div>
                 </div>
                 <span class="error"></span>
                 <button type="submit" class="btn btn-ajout mt-4 mb-1 float-end" id="ajoute">Ajouter</button>
