amélioration du design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="alert container mt-2">
+    <div class="alert container-fluid mt-2">
         <div class="header d-flex">
             <h4 class="alert-heading mt-4">SCHOOL APP</h4>
         <a href="listDetail.html"><button type="button" class="liste mt-4 ms-4 btn">Liste des Apprenants</button></a>
