modification des margin

--- a/listDetail.html
+++ b/listDetail.html
@@ -11,10 +11,15 @@
     <title>liste des Apprenenants</title>
 </head>
 <body>
-<div class="titre mt-3">
-    <h1>Liste des Apprenants</h1>
+<div class="titre mt-3 row">
+    <div class="col-2">
+        <a href="index.html"><button type="button" class="liste btn btn-outline-light">Retour Formulaire</button></a>
+    </div>
+   <div class="col-10">
+        <h1>Liste des Apprenants</h1>
+   </div>
 </div>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 container-fluid" id="cartes"></div>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 container-fluid ms-5" id="cartes"></div>
    <script src="./listApp.js"></script>
 </body>
 </html>
